force-app/main/default/objects/Location__c/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <label>city</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>