force-app/main/default/objects/Location__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>New Zeland</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>