force-app/main/default/objects/Location__c/fields/land_mark__c.field-meta.xml
<CustomField>
    <fullName>land_mark__c</fullName>
    <label>land mark</label>
    <type>TextArea</type>
</CustomField>