force-app/main/default/objects/Location__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>state</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>